# waylyrics

./: .deepsource.toml  .gitignore  .packit.yaml  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.en.md  INSTALLATION.md  LICENSE  README.en.md  README.md  build.ps1  build.rs  check_dup_deps.sh  config.toml.example  crates.js  flake.nix  help.html  io.poly000.waylyrics.desktop  io.poly000.waylyrics.gschema.xml  io.poly000.waylyrics.metainfo.xml  ncm-cookie  ncmcookie  resp.json  search-index.js  settings.html  src-files.js  style.css.example  waylyrics.spec
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: Bug_Report.md  bug_report.md  feature_request.md  功能请求.md  错误报告.md
.github/workflows/: automerge.yaml  changelog.yaml  docs.yaml  fossa.yml  smoketest.yml  test.yml
doc/: BUILD_GUIDE_UBUNTU.en.md  BUILD_GUIDE_UBUNTU.zh_cn.md  BUILD_GUIDE_UBUNTU.zh_en.md  CONTRIBUTING.md  CONTRIBUTION.cn.md  INSTALLATION.en.md  INSTALLATION.md
locales/: generate_po.sh  waylyrics.po  waylyrics.pot
metainfo/: io.github.waylyrics.Waylyrics.desktop  io.github.waylyrics.Waylyrics.gschema.xml  io.github.waylyrics.Waylyrics.metainfo.xml
search.desc/waylyrics/: waylyrics-desc-0-.js
search.index/: 000e7067cef6.js  0049b3da190b.js  005327cb70a7.js  00642b6c70f2.js  009b24841026.js  00a21c1b1e0d.js  00b256434531.js  00d203c807b5.js  00fc2d17dce3.js  010afa545f8b.js  010e328d770b.js  012109d57c86.js  012348f97886.js  01279f35885d.js  012c9c7ccb99.js  0137e48c87fa.js  01434eb15f40.js  014f0d900120.js  01513bedaaa2.js  015d330749.js  017aec154084.js  01d6cbb7ded5.js  01eb8814b9.js  01f12e43a2fb.js  021b3aff99a9.js  0226f4f35c6a.js  029d1a25e2df.js  02b250449e02.js  02b8845234f2.js  02c5a67359d3.js  03024fe34826.js  0308d8429be5.js  0352814d05be.js  03659e0f99c3.js  038fb82feb09.js  0393fbe84adf.js  03c7a5b04535.js  03e4073b7819.js  04148213d910.js  042c0b4ec849.js  (+1086 more)
search.index/crateNames/: 58f239818a.js
search.index/desc/: 0c2eac55f17a.js  180a92c7ba46.js  72fd7b239536.js  74aec819b4.js  ee5c1eac9ed6.js
search.index/entry/: 4c3dc19f1411.js  592cb683144d.js  6bb7843189.js  94acbc76fc17.js  97ea1d343ee3.js  a57f3a29777b.js  daf2ca61ac83.js  e3425117f656.js  ec3426d52e5e.js  f3adca7d5600.js  fe1e4b3f1f3f.js
search.index/function/: 0537d00430.js  63db3593532f.js  6ac0ccb13dcd.js  6ac9215bc7c1.js  77cc43fb1760.js  873e92cf335e.js  8d771773e71b.js  ced72ae40697.js  cf12900864e5.js  cfc16faf0be1.js  e03555e9bddb.js  e400f44e652f.js
search.index/generic_inverted_index/: 034d5a4c633a.js  171712c6e2e5.js  2b83e20162a7.js  7b1a64fe9fa4.js  a68fae86ce2e.js  bfb0f4c213eb.js  c72c379413e4.js  cb03087491f5.js  e8ad05742a.js  febea3fd9d04.js
search.index/name/: 010a7edb88a1.js  189e564d0345.js  23361ee62a54.js  2547194394d9.js  5001414bd2dc.js  804808be302a.js  aa6f88a885.js  cdc9d468a548.js  edc456f757b5.js  f67afc4aa678.js
search.index/normalizedName/: 40a6c297430e.js  4da915db01fc.js  53b404ef3462.js  98558061b2eb.js  c057341f6844.js  c076c31fb568.js  cc4cb95c7286.js  dd697c97cd7b.js  deb6eff1bf.js  f837fb3ef0aa.js
search.index/path/: 442af1f85153.js  5395a7725f7f.js  b8f870e4f74c.js  c6a2ce7036dd.js  e60a2eab2d.js  e6df6628d6f9.js  f5fcc252b691.js
search.index/type/: 064aab439908.js  1926f5440bb6.js  1f4c332f4ef7.js  1f50902c5a22.js  375c695d0fe8.js  4881a3548188.js  58bb0474a436.js  69111c4e5f.js  9c5cc0bdd49d.js  b1ae506704b3.js  b1f650c113bb.js  f31b5de32e50.js
src/: config.rs  default-style.css  lib.rs  main.rs
src/app/: dialog.rs  mod.rs  utils.rs
src/config/: layer_shell.rs  merge.rs  mod.rs
src/lyric/: mod.rs  netease.rs  utils.rs
src/lyric_providers/: dict.rs  mod.rs  strip_util.rs  utils.rs
src/sync/: cache.rs  lyric.rs  mod.rs  player.rs  utils.rs
src/tests/: is_likely_songid.rs  lrclib_lyric.rs  lyric_construct.rs  lyric_parse.rs  lyric_path.rs  mod.rs  netease_lyric.rs  qqmusic_init.rs  strip_extended_timestamps.rs
src/tray_icon/: mod.rs
src/utils/: instance.rs  mod.rs  shortcut.rs  theme.rs
src/waylyrics/: config.rs.html  lib.rs.html
src/window/: imp.rs  mod.rs
tests/: lyric_parse.rs  netease_lyric.rs
themes/: default-dark.css  default.css  full-box-dark.css  full-box.css  no-background.css  ocean.css  trans.css  waylyrics-minimal-theme.css
trait.impl/documented/: trait.DocumentedFields.js
trait.impl/ksni/: trait.Tray.js
trait.impl/strum/: trait.IntoEnumIterator.js
waylyrics/: all.html  constant.APP_ID.html  constant.APP_ID_FIXED.html  constant.CACHE_DIR.html  constant.CONFIG_HOME.html  constant.DEFAULT_TEXT.html  constant.EXCLUDED_REGEXES.html  constant.GTK_APPLICATION.html  constant.GTK_DBUS_CONNECTION.html  constant.LYRIC_PROVIDERS.html  constant.MAIN_WINDOW.html  constant.PACKAGE_NAME.html  constant.PLAYER_IDENTITY_BLACKLIST.html  constant.PLAYER_NAME_BLACKLIST.html  constant.QQMUSIC_API_CLIENT.html  constant.THEME_PATH.html  index.html  macro.glib_spawn!.html  macro.glib_spawn.html  macro.tokio_spawn!.html  macro.tokio_spawn.html  sidebar-items.js  static.CONFIG_HOME.html  static.INSTANCE_NAME.html  static.LYRIC_PROVIDERS.html  static.LYRIC_SEARCH_SKIP.html  static.MAIN_CONTEXT.html  static.QQMUSIC_API_CLIENT.html  static.TOKIO_RUNTIME.html
waylyrics/app/: constant.REMOVE_LYRICS.html  constant.WINDOW_MIN_HEIGHT.html  fn.build_main_window.html  fn.get_label.html  fn.get_labels.html  fn.set_label_classes.html  fn.set_lyric_align.html  fn.set_lyric_display_mode.html  index.html  sidebar-items.js  struct.Window.html
waylyrics/config/: enum.Align.html  enum.ColorScheme.html  enum.LyricDisplay.html  enum.LyricDisplayMode.html  fn.append_comments.html  fn.default_filter_regexies.html  index.html  sidebar-items.js  struct.AlignIter.html  struct.AlignS.html  struct.ColorSchemeIter.html  struct.Config.html  struct.LyricDisplayIter.html  struct.LyricDisplayModeIter.html  struct.Triggers.html
waylyrics/log/: index.html  macro.debug.html  macro.error.html  macro.info.html  macro.trace.html  macro.warn.html  sidebar-items.js
waylyrics/lyric/: enum.Error.html  enum.Lyric.html  enum.LyricOwned.html  index.html  (+7 more)
(+587 files in other folders)
