[package]
name = "waylyrics"
version = "0.3.21"
edition = "2021"
description = "Simple On Screen lyrics Display for linux/unix"
authors = ["poly000"]
license-file = "LICENSE"
rust-version = "1.78.0"

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1
opt-level = "s"

[profile.dev]
panic = "abort"

[profile.test]
debug = false
incremental = true
lto = "off"

[dependencies]
mimalloc = { version = "0.1.48", optional = true, default-features = false }
once_cell = "1.20.3"

# serializing
toml = "0.9.8"
toml_edit = { version = "0.23.7", features = ["serde"] }
documented = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rust_decimal = { version = "1.37.2", default-features = false, features = [
    "std",
] }
rust_decimal_macros = "1.39.0"
url = "2.5.7"

# ui
gtk = { version = "0.9.6", package = "gtk4" }
glib-macros = "0.21.0"
dark-light = { git = "https://github.com/frewsxcv/rust-dark-light.git", rev = "b8edef9072f7d38ae879129cde03bb1f40750c4c", features = [
    "sync",
] }
# Required by async stream
futures-lite = "2.6.0"

# lyric providers + parse
ncmapi = { version = "0.1.13", package = "ncmapi2" }
qqmusic-rs = { version = "0.2.1" }
lrclib-api-rs = { version = "0.3.1" }
lrc-nom = "0.3.0"

# logging
tracing = "0.1.43"
tracing-journald = { version = "0.3.1", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# cache
md5 = "0.8.0"

# utils
regex = "1.11.1"
directories = "6.0.0"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
sorensen = "0.2.0"
ahash = "0.8.12"
rfd = { version = "0.15.1", optional = true }
hex-simd = { version = "0.8.0", optional = true, default-features = false }

# error handling
anyhow = "1.0.98"
thiserror = "2.0.17"

# networking
async-trait = "0.1.88"
tokio = { version = "1.48.0", features = [
    "macros",
    "net",
    "time",
    "rt",
    "rt-multi-thread",
] }
reqwest = { version = "0.12.22" }

# event
async-channel = { version = "2.4.0" }

# i18n
gettext-rs = { version = "0.7.2", features = [
    "gettext-system",
], optional = true }
opencc-rust = { version = "1.1", optional = true }
sys-locale = { version = "0.3.2", optional = true }
tracing-panic = "0.1.2"
lofty = "0.22.4"
dashmap = "6.1.0"

[features]
default = [
    "mimalloc",
    "tray-icon",
    "i18n",
    "journald",
    "import-lyric",
    "export-lyric",
    "i18n-local-lyric",
    "multi-monitor",
]
tray-icon = ["action-event", "dep:ksni", "dep:tray-item"]
i18n = ["dep:gettext-rs"]
journald = ["dep:tracing-journald"]
opencc = ["dep:opencc-rust"]
import-lyric = ["dep:rfd"]
export-lyric = ["dep:rfd"]
i18n-local-lyric = ["dep:sys-locale"]
multi-monitor = ["dep:hex-simd"]

mimalloc = ["dep:mimalloc"]
vendored = ["dbus/vendored"]
action-event = []
offline-test = []

[target.'cfg(unix)'.dependencies]
# MPRIS integration
dbus = "0.9.9"
ksni = { version = "0.3.1", optional = true, features = [
    "async-io",
], default-features = false }
mpris = "2.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = { version = "0.10.0", optional = true }
windows = { version = "0.62.1", features = [
    # SMTC
    "Media_Control",
    "Foundation_Collections",
    "Storage_Streams",
    # Surface operation
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
gdk4-win32 = { version = "0.10.1" }

[target.'cfg(windows)'.build-dependencies]
windows_exe_info = { version = "0.5.2" }
